# led-light

./: .gitignore  AGENTS.md  BATTERY_SOC_TEST_TABLE.md  CMakeLists.txt  Netlist_Schematic2_2026-06-19.net  README.md  SOFTWARE_DEVELOPMENT.md  partitions.csv  sdkconfig.defaults
components/app_battery_test/: CMakeLists.txt  app_battery_test.c
components/app_battery_test/include/: app_battery_test.h
components/app_input/: CMakeLists.txt  app_input.c
components/app_input/include/: app_input.h
components/app_light/: CMakeLists.txt  app_light.c
components/app_light/include/: app_light.h
components/app_ota/: CMakeLists.txt  app_ota.c
components/app_ota/include/: app_ota.h
components/app_safety/: CMakeLists.txt  app_safety.c
components/app_safety/include/: app_safety.h
components/app_sensor/: CMakeLists.txt  app_sensor.c
components/app_sensor/include/: app_sensor.h
components/app_settings/: CMakeLists.txt  app_settings.c
components/app_settings/include/: app_settings.h
components/app_state/: CMakeLists.txt  app_state.c
components/app_state/include/: app_state.h
components/app_ui/: CMakeLists.txt  app_ui.c
components/board/: CMakeLists.txt  board_pins.c
components/hal_adc/: CMakeLists.txt  hal_adc.c
components/hal_display/: CMakeLists.txt  hal_display.c
components/hal_fan/: CMakeLists.txt  hal_fan.c
components/hal_input/: CMakeLists.txt  hal_input.c
components/hal_led/: CMakeLists.txt  hal_led.c
components/hal_power/: CMakeLists.txt  hal_power.c
docs/: HARDWARE_TODO.md
main/: CMakeLists.txt  app_main.c  idf_component.yml
(+8 files in other folders)
